Rough cut of product details page

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -474,3 +474,8 @@
   }
   html, body { height: 100%; }
   body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+  footer {
+      text-align: center;
+      font-size: .8rem;
+  }
