--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,7 @@
 $light_green: #16B67C;
+$bright_green: #0af230;
 $red: #FF0000;
+$bright_red: #e8171e;
 
 $brown: #a97244;
 $dark-brown: darken($brown, 10%);
