--- a/components/hot-products/hot-products.module.scss
+++ b/components/hot-products/hot-products.module.scss
@@ -13,8 +13,7 @@
         align-items: center;
         padding: 10px;
         background-color: $white;
-        border: 1px solid $grey;
-        border-radius: .2rem;
+        box-shadow: 2px 2px 1px $black;
         transition: all .1s linear;
 
         .imageContainer {
@@ -28,7 +27,8 @@
         }
 
         &:hover {
-            transform: scale(1.02)
+            transform: scale(1.02);
+            cursor: pointer;
         }
     }
 }
