Ability to add an item to the list

--- a/components/category-list/category-list.module.scss
+++ b/components/category-list/category-list.module.scss
@@ -14,14 +14,9 @@
         align-items: center;
         padding: 10px;
         background-color: $bright_green;
-        box-shadow: 5px 5px 1px limegreen;
+        box-shadow: 5px 5px 1px $green_drop_shadow;
         color: $white;
-        border-radius: .5rem;
         transition: all .1s linear;
-
-        button {
-            
-        }
 
         &:hover {
             transform: scale(1.02);
