--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -33,7 +33,7 @@
         span {
             background-color: $bright_green;
             color: $white;
-            box-shadow: 15px 15px 1px limegreen;
+            box-shadow: 15px 15px 1px $green_drop_shadow;
         }
     }
 
