--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -4,7 +4,7 @@
     font-weight: 800;
     letter-spacing: -0.05rem;
     margin: 1rem 0;
-    padding: 1rem 0 1rem 0;
+    padding: 2rem 0 0 0;
 }
 
 .headingXl {
@@ -56,4 +56,11 @@
     position: relative;
     width: 150px;
     height: 150px;
+}
+
+.addBtn {
+    background-color: #ffd000;
+    border: #ffd000;
+    padding: .4rem 1rem;
+    margin: 1rem 0 1rem 0;
 }
