--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,6 +8,7 @@ $brown: #a97244;
 $dark-brown: darken($brown, 10%);
 
 $white: #FFFFFF;
+$off-white: #EEEEEE;
 $light-grey: #CCCCCC;
 $grey: #999999;
 $black: #333333;
