Ability to change quantity of items in the list

--- a/components/list/list.module.scss
+++ b/components/list/list.module.scss
@@ -37,6 +37,10 @@
     }
 
     .quantityPicker {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        
         button {
             padding: .4rem;
             border: none;
