--- a/components/category-list/category-list.module.scss
+++ b/components/category-list/category-list.module.scss
@@ -4,12 +4,16 @@
     display: grid;
     grid-gap: 1rem;
     padding: 1rem 0;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 
+    a {
+        text-decoration: none;
+    }
+    
     .item {
-        display: flex;
+        display: flex;        
         position: relative;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         padding: 10px;
