--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,7 @@
 $light_green: #16B67C;
 $bright_green: #0af230;
 $green_drop_shadow: #1a991a;
+$dark_green: #004000;
 $red: #FF0000;
 $bright_red: #e8171e;
 
