--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,10 +1,12 @@
 .heading2Xl {
     font-size: 2.5rem;
-    line-height: 1.2;
+    line-height: 1.2rem;
     font-weight: 800;
     letter-spacing: -0.05rem;
     margin: 1rem 0;
-    padding: 2rem 0 0 0;
+    padding: 3rem 0 0 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .headingXl {
